unstaged and restaged commits involvig munge automation development. GitIGNORED the project/data/ directory to leave all data files unsynced, as they get too large for git to upload.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 #Currently includes, Python, R and JetBrains ignores from github templates.
 
+#ignore data directory because files get large
+project/data/
+
+
 #mac os
 .DS_Store
 
